# so101_ws

./: .gitmodules  readme.md
src/lerobot_controller/config/: so101_controllers.yaml
src/lerobot_description/launch/: so101_display.launch.py  so101_gazebo.launch.py  so101_hardware.launch.py
src/lerobot_description/rviz/: display.rviz
src/lerobot_description/urdf/: so101_base.xacro  so101_feetech.urdf.xacro  so101_gazebo.urdf.xacro  so101_isaac.urdf.xacro  so101_ros2_control_feetech.xacro  so101_ros2_control_gazebo.xacro  so101_ros2_control_isaac.xacro
src/lerobot_hardware/: CMakeLists.txt  package.xml  so101_hardware.xml
src/lerobot_hardware/include/lerobot_hardware/: so101_hardware.hpp  so101_hardware_interface.hpp
src/lerobot_hardware/launch/: so101_hardware.launch.py
src/lerobot_hardware/src/: so101_hardware.cpp  so101_hardware_interface.cpp
src/lerobot_isaac/: CMakeLists.txt  package.xml  skrl_config.yaml  so101_isaac.py
src/lerobot_isaac/launch/: so101_isaac_bringup.launch.py
src/lerobot_moveit/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  so101.srdf
src/lerobot_moveit/launch/: so101_moveit.launch.py
